// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`rebuild() function > [#0] rebuild(0, 1, ...) 1`] = `
{
  "data": [
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    8,
    0,
    0,
    0,
    116,
    101,
    120,
    116,
    115,
    95,
    100,
    98,
    0,
    0,
    0,
    0,
  ],
  "type": "Buffer",
}
`;

exports[`rebuild() function > [#1] rebuild(0, 2, ...) 1`] = `
{
  "data": [
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    2,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    8,
    0,
    0,
    0,
    116,
    101,
    120,
    116,
    115,
    95,
    100,
    98,
    1,
    0,
    0,
    0,
    5,
    0,
    0,
    0,
    72,
    69,
    76,
    76,
    79,
    0,
    0,
    0,
    7,
    0,
    0,
    0,
    1,
    0,
    0,
    0,
    87,
    0,
    0,
    0,
    1,
    0,
    0,
    0,
    79,
    0,
    0,
    0,
    1,
    0,
    0,
    0,
    82,
    0,
    0,
    0,
    1,
    0,
    0,
    0,
    76,
    0,
    0,
    0,
    1,
    0,
    0,
    0,
    68,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    0,
    0,
    0,
    33,
    0,
    0,
    0,
  ],
  "type": "Buffer",
}
`;

exports[`rebuild() function > [#2] rebuild(0, 3, ...) 1`] = `
{
  "data": [
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    3,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    8,
    0,
    0,
    0,
    116,
    101,
    120,
    116,
    115,
    95,
    100,
    98,
    2,
    0,
    0,
    0,
    1,
    0,
    0,
    0,
    65,
    0,
    0,
    0,
    2,
    0,
    0,
    0,
    1,
    0,
    0,
    0,
    66,
    0,
    0,
    0,
    1,
    0,
    0,
    0,
    67,
    0,
    0,
    0,
    1,
    0,
    0,
    0,
    68,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
  ],
  "type": "Buffer",
}
`;

exports[`rebuild() function > [#3] rebuild(0, 4, ...) 1`] = `
{
  "data": [
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    4,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    8,
    0,
    0,
    0,
    116,
    101,
    120,
    116,
    115,
    95,
    100,
    98,
    1,
    0,
    0,
    0,
    5,
    0,
    0,
    0,
    72,
    101,
    108,
    108,
    111,
    0,
    0,
    0,
    1,
    0,
    0,
    0,
    6,
    0,
    0,
    0,
    87,
    111,
    114,
    108,
    100,
    33,
    0,
    0,
  ],
  "type": "Buffer",
}
`;

exports[`rebuild() function > [#4] rebuild(0, 5, ...) 1`] = `
{
  "data": [
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    5,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    8,
    0,
    0,
    0,
    116,
    101,
    120,
    116,
    115,
    95,
    100,
    98,
    2,
    0,
    0,
    0,
    5,
    0,
    0,
    0,
    72,
    101,
    108,
    108,
    111,
    0,
    0,
    0,
    1,
    0,
    0,
    0,
    6,
    0,
    0,
    0,
    87,
    111,
    114,
    108,
    100,
    33,
    0,
    0,
    5,
    0,
    0,
    0,
    72,
    101,
    108,
    108,
    111,
    0,
    0,
    0,
    1,
    0,
    0,
    0,
    6,
    0,
    0,
    0,
    87,
    111,
    114,
    108,
    100,
    33,
    0,
    0,
  ],
  "type": "Buffer",
}
`;

exports[`rebuild() function > [#5] rebuild(0, 6, ...) 1`] = `
{
  "data": [
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    6,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    8,
    0,
    0,
    0,
    116,
    101,
    120,
    116,
    115,
    95,
    100,
    98,
    2,
    0,
    0,
    0,
    4,
    0,
    0,
    0,
    65,
    66,
    67,
    68,
    3,
    0,
    0,
    0,
    4,
    0,
    0,
    0,
    65,
    66,
    67,
    68,
    0,
    0,
    0,
    0,
    4,
    0,
    0,
    0,
    49,
    50,
    51,
    52,
    6,
    0,
    0,
    0,
    49,
    50,
    51,
    52,
    53,
    54,
    0,
    0,
    3,
    0,
    0,
    0,
    4,
    0,
    0,
    0,
    65,
    66,
    67,
    68,
    0,
    0,
    0,
    0,
    4,
    0,
    0,
    0,
    49,
    50,
    51,
    52,
  ],
  "type": "Buffer",
}
`;
